# progetto_finale

./: CMakeCache.txt  CMakeLists.txt  Log.h  Makefile  README.md  cmake_install.cmake  log.txt  monopoly
include/: AngularBox.h  Bot.h  Box.h  Dice.h  Game.h  GameBoard.h  Human.h  LateralBox.h  Log.h  Player.h
src/: AngularBox.cpp  Bot.cpp  Dice.cpp  Game.cpp  GameBoard.cpp  Human.cpp  LateralBox.cpp  Log.cpp  Player.cpp  main.cpp
